--- a/Conjunta/css/styles.css
+++ b/Conjunta/css/styles.css
@@ -1,4 +1,4 @@
-.form{
+.form {
     margin: 5px 500px;
     background-color: rgb(97, 172, 172);
     border-radius: 5%;
@@ -45,7 +45,7 @@ body {
 
 .form-register p {
     height: 40px;
-    text-align: center;
+    text-align: right;
     font-size: 18px;
     line-height: 40px;
 }
@@ -68,4 +68,102 @@ body {
     color: white;
     margin: 16px 0;
     font-size: 16px;
+}
+
+
+/*Conjunta*/
+h1,
+h2,
+h3 {
+    text-align: center;
+}
+
+nav ul {
+    list-style: none;
+    text-align: center;
+    padding: 0px;
+    font-size: 20px;
+}
+
+.form-register {
+
+    text-align: center;
+
+}
+
+nav ul li {
+    display: inline-block;
+    padding: 10px;
+}
+
+ul li a {
+    text-decoration: none;
+    color: rgb(13, 73, 70);
+
+}
+
+P {
+    text-align: center;
+    margin: 30;
+    padding: 30;
+}
+
+.portada {
+    width: 100%;
+    height: auto;
+}
+
+
+header {
+    font-family: Helvetica;
+    width: 100%;
+    margin: 10 auto;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 2px 2px 5px #999;
+}
+
+
+.navegacion {
+    background-color: rgb(44, 145, 212);
+}
+
+.navegacion ul {
+    list-style: none;
+    text-align: center;
+}
+
+.menu>li {
+    position: relative;
+    display: inline-block;
+}
+
+.menu>li>a {
+    display: block;
+    padding: 20px 20px;
+    color: #353535;
+    font-family: 'Open sans';
+    text-decoration: none;
+}
+
+
+.menu li:hover .submenu {
+    visibility: visible;
+    opacity: 1;
+}
+
+
+.menu li:hover {
+    color: #ffffff;
+    transition: all .3s;
+    background-color: #ffffff;
+}
+
+
+.image {
+    width: 120px;
+    height: 150px;
+}
+
+table {
+    position: center;
 }
